todo-tallinn/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-tallinn
  namespace: tallinn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: ghcr.io/tluhk/todo:latest
          ports:
            - containerPort: 8082
      imagePullSecrets:
        - name: ghcr-secret
