todo-tallinn/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: tallinn
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
